grade section for table labels

--- a/template/syllabus.tex
+++ b/template/syllabus.tex
@@ -49,7 +49,9 @@
   pdfsubject={California State University, Fullerton Syllabus},
   pdfkeywords={CSUF, Syllabus, Public Administration, MPA},
   colorlinks=true,
-  linkcolor=blue
+  linkcolor=blue,
+  urlcolor=blue,
+  citecolor=blue
 }
 
 % Document title block
@@ -57,7 +59,7 @@
        \large Semester Session YEAR — Delivery Mode \\
        \normalsize START DATE — END DATE}
 \author{Dr. David P. Adams \\
-        Department of Political Science \\
+        Divison of Politics, Administration \& Justice \\
         California State University, Fullerton}
 \date{}
 
@@ -313,6 +315,9 @@ Description of major assignment goes here.
 
 \phantomsection
 \subsection*{Grade Distribution}
+
+Refer to Table \ref{tab:grade-weights} for detailed grade weights.
+\phantomsection
 \begin{table}[ht]
 \caption{Course Grade Weights}
 \centering
@@ -331,6 +336,9 @@ ASSIGNMENT TYPE 4 & PERCENTAGE\% \\
 
 \phantomsection
 \subsection*{Grading Scale}
+
+Refer to Table \ref{tab:grading-scale} for the letter grade scale.
+\phantomsection
 \begin{table}[ht]
 \caption{Letter Grade Scale}
 \centering
