--- a/template/syllabus.tex
+++ b/template/syllabus.tex
@@ -274,7 +274,7 @@ All submissions must demonstrate:
 \item Original analysis and critical thinking
 \end{itemize}
 
-Assignments will be checked using plagiarism and AI detection software.
+Assignments may be checked using plagiarism detection software.
 
 \phantomsection
 \section*{Course Structure and Delivery}
