--- a/template/syllabus.tex
+++ b/template/syllabus.tex
@@ -28,9 +28,11 @@
 \geometry{margin=1in}
 
 % Fonts and spacing
-\usepackage{lmodern}
+\usepackage[scaled]{helvet}
+\renewcommand{\familydefault}{\sfdefault}
 \usepackage{setspace}
 \onehalfspacing
+
 
 % Lists and sections
 \usepackage{enumitem}
