--- a/template/syllabus.tex
+++ b/template/syllabus.tex
@@ -2,6 +2,11 @@
 % Created by David P. Adams, Ph.D. for public use
 % Compatible with all major LaTeX distributions
 %
+% LICENSE: Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International
+% You are free to share and adapt this work for non-commercial purposes with attribution
+% Full license: https://creativecommons.org/licenses/by-nc-sa/4.0/
+%
+%
 % USAGE INSTRUCTIONS:
 % 1. Replace ALL CAPS placeholders with your course information
 % 2. Examples: 
