--- a/template/syllabus.tex
+++ b/template/syllabus.tex
@@ -80,7 +80,7 @@
 
 % Add university logo with proper alt text
 \begin{center}
-\includegraphics[width=0.4\textwidth]{csuf_logo.png}
+\includegraphics[width=0.4\textwidth, alt={Cal State Fullerton logo}]{csuf_logo.png}
 \end{center}
 
 \section*{Contact Information and Office Hours}
