support services link section header

--- a/template/syllabus.tex
+++ b/template/syllabus.tex
@@ -516,7 +516,7 @@ Know evacuation routes and follow emergency instructions. More information is av
 \subsection*{Basic Needs Statement}
 Students who face challenges securing food or housing are encouraged to contact the \textbf{CSUF Basic Needs Center} at \href{https://www.fullerton.edu/basicneeds}{fullerton.edu/basicneeds} for support.
 
-\subsection*{Support Services}
+\subsection*{Links to Support Services}
 \begin{itemize}
 \item \textbf{\href{https://www.fullerton.edu/caps/}{Counseling \& Psychological Services}} -- confidential mental health support
 \item \textbf{\href{https://www.fullerton.edu/titleix/}{Title IX and Gender Equity Resources}} -- support for discrimination and harassment issues
