--- a/template/syllabus.tex
+++ b/template/syllabus.tex
@@ -1,5 +1,5 @@
 % Accessible Syllabus Template - CSU Fullerton
-% Created by David P. Adams, Ph.D. for public use
+% Created by David P. Adams, Ph.D.
 % Compatible with all major LaTeX distributions
 %
 % LICENSE: Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International
