--- a/template/syllabus.tex
+++ b/template/syllabus.tex
@@ -38,7 +38,7 @@
 
 % use helvetica font for all text
 \renewcommand{\rmdefault}{phv} % Helvetica
-\renewcommand{\sfdefault}{phv} % Helvetica
+\renewcommand{\sfdefault}{phv} % Helveticaf6
 \renewcommand{\ttdefault}{pcr} % Courier
 
 
@@ -48,7 +48,7 @@
 
 % Tables and figures
 \usepackage{graphicx}
-\usepackage{array, booktabs, longtable}
+\usepackage{array, booktabs, longtable}Kf
 \usepackage{xcolor}
 \usepackage{caption}
 
