--- a/csuf_template/csuf_template.tex
+++ b/csuf_template/csuf_template.tex
@@ -174,13 +174,23 @@
 \end{center}
 
 \begin{center}
-\begin{tabular}{|l|l||l|l||l|l||l|l||l|l|}
+\begin{tabular}{|l|c|}
 \hline
-\multicolumn{2}{|c|}{\textit{Outstanding}} & \multicolumn{2}{|c|}{\textit{Good}} & \multicolumn{2}{|c|}{\textit{Acceptable}} & \multicolumn{2}{|c|}{\textit{Poor}} & \multicolumn{2}{|c|}{\textit{Failing}} \\
+\textbf{Grade} & \textbf{Percent Range} \\
 \hline
-A+ = 4.0 & 98-100 & B+ = 3.3 & 87-89 & C+ = 2.3 & 77-79 & D+ = 1.3 & 67-69 & F = 0.0 & 0-59 \\
-A = 4.0 & 93-97 & B = 3.0 & 83-86 & C = 2.0 & 73-76 & D = 1.0 & 63-66 & & \\
-A- = 3.7 & 90-92 & B- = 2.7 & 80-82 & C- = 1.7 & 70-72 & D- = 0.7 & 60-62 & & \\
+A+ (4.0) & 98.0--100.0 \\
+A  (4.0) & 93.0--97.9 \\
+A- (3.7) & 90.0--92.9 \\
+B+ (3.3) & 87.0--89.9 \\
+B  (3.0) & 83.0--86.9 \\
+B- (2.7) & 80.0--82.9 \\
+C+ (2.3) & 77.0--79.9 \\
+C  (2.0) & 73.0--76.9 \\
+C- (1.7) & 70.0--72.9 \\
+D+ (1.3) & 67.0--69.9 \\
+D  (1.0) & 63.0--66.9 \\
+D- (0.7) & 60.0--62.9 \\
+F  (0.0) & 0.0--59.9 \\
 \hline
 \end{tabular}
 \end{center}
@@ -445,6 +455,7 @@ Other information as applicable
 
 \vspace{0.5em}
 
+
 \begin{center}
 \textbf{Table 3: Schedule of Classes for a Spring semester}
 \end{center}
@@ -452,7 +463,7 @@ Other information as applicable
 \begin{center}
 \begin{tabular}{|c|c|p{3cm}|p{4cm}|p{3cm}|}
 \hline
-\textbf{Week} & \textbf{Date} & \textbf{Topic} & \textbf{Readings, Screenings} & \textbf{Assignments Due} \\
+\textbf{Week} & \textbf{Date} & \textbf{Topic} & \parbox[t]{4cm}{\raggedright\textbf{Readings,\\Screenings}} & \parbox[t]{3.5cm}{\raggedright\textbf{Assignments\\Due}} \\
 \hline
 1 & 1/27 & Welcome, intro, overview & N/A &  \\
 \hline
@@ -468,7 +479,7 @@ Other information as applicable
 \hline
 7 & 3/10 & & &  \\
 \hline
-8 & 3/17 & Midterm Exam (if applicable) & &  \\
+8 & 3/17 & Midterm Exam (if applicable) & ~ & ~ \\
 \hline
  & 3/24 & Spring Recess & No class &  \\
 \hline
